--- a/index.html
+++ b/index.html
@@ -49,19 +49,27 @@
             type="button"
           ></button>
           <h3 class="popup__title">Editar perfil</h3>
-          <form class="popup__form" id="edit-profile-form">
+          <form class="popup__form" id="edit-profile-form" novalidate>
             <input
               class="popup__input popup__input_type_name"
               name="name"
+              minlength="2"
+              maxlength="40"
               placeholder="Nome"
               type="text"
+              required
             />
+            <span class="name-input-error form__input-error"></span>
             <input
               class="popup__input popup__input_type_description"
               name="description"
+              minlength="2"
+              maxlength="200"
               placeholder="Sobre mim"
               type="text"
+              required
             />
+            <span class="description-input-error form__input-error"></span>
             <button class="button popup__button" type="submit">Salvar</button>
           </form>
         </div>
@@ -74,14 +82,17 @@
             type="button"
           ></button>
           <h3 class="popup__title">Novo local</h3>
-          <form class="popup__form" id="new-card-form">
+          <form class="popup__form" id="new-card-form" novalidate>
             <input
               class="popup__input popup__input_type_card-name"
               name="place-name"
               placeholder="Título"
               required
               type="text"
+              minlength="2"
+              maxlength="30"
             />
+            <span class="place-name-input-error form__input-error"></span>
             <input
               class="popup__input popup__input_type_url"
               name="link"
@@ -89,6 +100,7 @@
               required
               type="url"
             />
+            <span class="link-input-error form__input-error"></span>
             <button class="button popup__button" type="submit">Criar</button>
           </form>
         </div>
