--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               type="text"
               required
             />
-            <span class="name-input-error form--input-error"></span>
+            <span class="name-input-error form__error-message"></span>
             <input
               class="popup__input popup__input_type_description"
               name="description"
@@ -69,7 +69,7 @@
               type="text"
               required
             />
-            <span class="description-input-error form--input-error"></span>
+            <span class="description-input-error form__error-message"></span>
             <button class="button popup__button" type="submit">Salvar</button>
           </form>
         </div>
@@ -92,7 +92,7 @@
               minlength="2"
               maxlength="30"
             />
-            <span class="place-name-input-error form--input-error"></span>
+            <span class="place-name-input-error form__error-message"></span>
             <input
               class="popup__input popup__input_type_url"
               name="link"
@@ -100,7 +100,7 @@
               required
               type="url"
             />
-            <span class="link-input-error form--input-error"></span>
+            <span class="link-input-error form__error-message"></span>
             <button class="button popup__button" type="submit">Criar</button>
           </form>
         </div>
