--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
               type="text"
               required
             />
-            <span
-              class="name-input-error popup__popup__form__error-message"
-            ></span>
+            <span class="name-input-error popup__error-message"></span>
             <input
               class="popup__input popup__input_type_description"
               name="description"
@@ -71,9 +69,7 @@
               type="text"
               required
             />
-            <span
-              class="description-input-error popup__form__error-message"
-            ></span>
+            <span class="description-input-error popup__error-message"></span>
             <button class="button popup__button" type="submit">Salvar</button>
           </form>
         </div>
@@ -96,9 +92,7 @@
               minlength="2"
               maxlength="30"
             />
-            <span
-              class="place-name-input-error popup__form__error-message"
-            ></span>
+            <span class="place-name-input-error popup__error-message"></span>
             <input
               class="popup__input popup__input_type_url"
               name="link"
@@ -106,7 +100,7 @@
               required
               type="url"
             />
-            <span class="link-input-error popup__form__error-message"></span>
+            <span class="link-input-error popup__error-message"></span>
             <button class="button popup__button" type="submit">Criar</button>
           </form>
         </div>
