--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@
         </div>
       </template>
     </div>
-    <script src="scripts/index.js"></script>
+    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
