--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
           </form>
         </div>
       </div>
+    
+      </div>
       <div class="popup" id="image-popup">
         <div class="popup__content popup__content_content_image">
           <button
