deletar cartao funcionando

--- a/index.html
+++ b/index.html
@@ -105,6 +105,18 @@
           </form>
         </div>
       </div>
+      <div class="popup" id="delete-confirmation-popup">
+        <div class="popup__content_delete">
+          <button
+            aria-label="Fechar pop-up"
+            class="popup__close"
+            type="button"
+          ></button>
+          <h3 class="popup__delete">Tem certeza?</h3>
+          <button class="button popup__confirm-button" type="submit">Sim</button>
+  
+        </div>
+      </div>
     
       </div>
       <div class="popup" id="image-popup">
